<resources>
    <string name="app_name">ADProject</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="user_name">UserName</string>
    <string name="password">Password</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="manage_request">Manage Request</string>
    <string name="manage_delegagtion">Manage Delegation</string>
    <string name="title_dashboard">DashBoard</string>
    <string name="manage_retrieval_list">Retrieval List</string>
    <string name="manage_disbursement">Disbursement List</string>
    <string name="manage_stock_card">Stock Card</string>
    <string name="adj_req">Adjustment Requests</string>
    <string name="cancel">Cancel</string>
    <string name="hint_start_date">Start Date</string>
    <string name="hint_end_date">End Date</string>

    <string name="point_1">CollectionPoint 1</string>
    <string name="point_2">CollectionPoint 2</string>
    <string name="point_3">CollectionPoint 3</string>
    <string name="point_4">CollectionPoint 4</string>
    <string name="point_5">CollectionPoint 5</string>
    <string name="point_6">CollectionPoint 6</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="request_detail">Request Detail</string>
    <string name="manage_collection">Manage Collection</string>
    <string name="item_code">Item Code</string>
    <string name="retrieval_list">RetrievalList</string>
    <string name="stock_card">StockCard</string>
    <string name="header_stationery">ItemName</string>
    <string name="quantity">Quantity</string>
    <string name="reason">Reason</string>
    <string name="alert_error">Error</string>
    <string name="msg_date_error">Start Date must before End Date!</string>
    <string name="submit">Submit</string>
    <string name="add">Add</string>
    <string name="alert_sorry">Sorry</string>
    <string name="alert_something_worng">SomethingWrong!\nCheckInternetConnection</string>
    <string name="alert_fail">Fail.SomethingWrong!</string>
    <string name="alert_date_req">Please choose date</string>
    <string name="new_delegation">CreateDelegation</string>
    <string name="success">\t\tSuccess</string>
    <string name="item_code_error">No Item found with this item code!</string>
    <string name="create_adj_voucher">CreateAdjVoucher</string>
    <string name="add_more_items">Please add item!</string>
    <string name="alert_confirm">Warning</string>
    <string name="confirm_req_status">Are you sure ?</string>
    <string name="approve_confirm">Are you sure to approve the request?</string>
    <string name="approve_all_confirm">Are you sure to approve ALL the request?</string>
    <string name="reject_confirm">Are you sure to reject the request?</string>
    <string name="confirm">Confirm</string>
    <string name="update">Update</string>
    <string name="alert_update_collection">Updating Collection Point</string>
    <string name="update_collection">Update Collection Point</string>
    <string name="cancel_delegation_confirm">Are you sure to this cancel delegation?</string>
    <string name="cancel_delegation">Cancel Delegation</string>
    <string name="alert_disbursement">Confirm Disbursement</string>
    <string name="list_not_ready">Opps!\nDisbursement List is not ready yet!!</string>
    <string name="alert_logout">LogOut</string>
    <string name="confirm_logout">Are you sure to logout?</string>
    <string name="confirm_disbursement">Are you sure to approve ?</string>
    <string name="login_fail">UserName or Password Wrong.Please Check again!!</string>
    <string name="retrieval_success">Retrieval List is confirmed. Now Disbursement Lists are ready.</string>
    <string name="update_disbursement">Updating DisbursementI</string>
    <string name="approve_all">Approve All</string>
    <string name="alert_approve">Approving All Request</string>

    <string-array name="collection_point">
        <item>Select Collection Point</item>
        <item>ISS</item>
        <item>Biz</item>
        <item>Central Library</item>
        <item>UTown</item>
    </string-array>
    <string-array name="representative">
        <item>Select Representative</item>
        <item>John</item>
        <item>Heli</item>
        <item>Jeremy</item>
        <item>UTown</item>
    </string-array>
    <string-array name="category">
        <item>Select Category</item>
        <item>Pen</item>
        <item>Pencil</item>
        <item>Marker</item>
    </string-array>

</resources>

