<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activities.AdjVoucherDetailActivity">
    <TextView
        android:id="@+id/tv_id"
        android:layout_marginBottom="@dimen/margin_5dp"
        style="@style/normal_textview" />
    <TextView
        android:id="@+id/tv_status"
        android:layout_marginBottom="@dimen/margin_5dp"
        style="@style/normal_textview" />
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/card_evaluation"
        app:cardCornerRadius="@dimen/card_radius"
        style="@style/card_adapter"
        app:cardBackgroundColor="@color/primary_green">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/header_stationery"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:layout_weight="1"
                style="@style/textview_style_secondary_title" />
            <TextView
                android:text="@string/quantity"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:layout_weight="1"
                style="@style/textview_style_secondary_title" />
            <TextView
                android:text="@string/reason"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:layout_weight="2"
                style="@style/textview_style_secondary_title" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rc_adj_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="@dimen/margin_5dp"
        />

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin_10dp"
        android:layout_marginTop="20dp"
        android:visibility="gone">
        <Button
            android:id="@+id/btn_reject"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/reject"
            android:background="@drawable/btn_reject_fill"
            android:layout_marginRight="@dimen/margin_10dp"
            />
        <Button
            android:id="@+id/btn_approve"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/approve"
            android:elevation="@dimen/margin_5dp"/>

    </LinearLayout>

</LinearLayout>