<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/margin_10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.ManageRequestActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_start_date"
                style="@style/edt_date_picker"
                android:layout_width="0dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:hint="@string/hint_start_date" />
            <EditText
                android:id="@+id/edt_end_date"
                style="@style/edt_date_picker"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/hint_end_date" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rc_req_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_approve"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/approve_all"
            android:layout_marginRight="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_gravity="center"
            android:visibility="invisible"
            />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>