<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AdjVoucherCreateActivity">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spin_category"
            style="@style/spinner_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:entries="@array/category" />

        <Spinner
            android:id="@+id/spin_item"
            style="@style/spinner_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/category" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_Quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantity"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>
        <RadioGroup
            android:id="@+id/rg_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rb_lost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Lost"/>
            <RadioButton
                android:id="@+id/rb_broken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Broken"/>
            <RadioButton
                android:id="@+id/rb_gift"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Free Gift"/>
            <RadioButton
                android:id="@+id/rb_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Other"/>
        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Reason" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btn_add"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:elevation="@dimen/margin_5dp"
            android:layout_marginBottom="@dimen/margin_10dp"/>

    </LinearLayout>

    <!--Header-->
    <android.support.v7.widget.CardView
        style="@style/card_adapter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/primary_green"
        app:cardCornerRadius="@dimen/card_radius"
        app:cardElevation="@dimen/card_evaluation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/textview_style_secondary_title"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:layout_weight="1"
                android:text="@string/item_code" />

            <TextView
                style="@style/textview_style_secondary_title"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:layout_weight="1"
                android:text="@string/quantity" />

            <TextView
                style="@style/textview_style_secondary_title"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:layout_weight="2"
                android:text="@string/reason" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rc_adj_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_5dp"
        android:layout_marginLeft="@dimen/margin_5dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin_10dp"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/btn_reject"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/reject"
            android:background="@drawable/btn_reject_fill"
            android:layout_marginRight="@dimen/margin_10dp"
            android:visibility="gone"
            />
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:elevation="@dimen/margin_5dp"/>

    </LinearLayout>
</LinearLayout>