<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/margin_5dp"
    tools:context=".activities.ClerkDashBoard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/margin_5dp">

        <android.support.v7.widget.CardView
            android:id="@+id/card_adj_req"
            style="@style/card_dashboard_dept"
            android:layout_height="200dp"
            android:layout_marginRight="@dimen/margin_10dp"
            app:cardCornerRadius="@dimen/card_radius"
            app:cardElevation="@dimen/card_evaluation"
            app:cardPreventCornerOverlap="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    style="@style/iv_dashboard"
                    android:src="@drawable/ic_adj_req" />

                <TextView
                    style="@style/tv_title_secondary"
                    android:text="@string/adj_req" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_stock_card"
            style="@style/card_dashboard_dept"
            android:layout_height="200dp"
            app:cardCornerRadius="@dimen/card_radius"
            app:cardElevation="@dimen/card_evaluation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    style="@style/iv_dashboard"
                    android:src="@drawable/ic_stock_card" />

                <TextView
                    style="@style/tv_title_secondary"
                    android:text="@string/manage_stock_card" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:id="@+id/card_disbursement"
            style="@style/card_dashboard_dept"
            android:layout_height="200dp"
            android:layout_marginRight="@dimen/margin_10dp"
            app:cardCornerRadius="@dimen/card_radius"
            app:cardElevation="@dimen/card_evaluation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    style="@style/iv_dashboard"
                    android:src="@drawable/ic_disbursement" />

                <TextView
                    style="@style/tv_title_secondary"
                    android:text="@string/manage_disbursement" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_retrival"
            style="@style/card_dashboard_dept"
            android:layout_height="200dp"
            app:cardCornerRadius="@dimen/card_radius"
            app:cardElevation="@dimen/card_evaluation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    style="@style/iv_dashboard"
                    android:src="@drawable/ic_retrieval_list" />

                <TextView
                    style="@style/tv_title_secondary"
                    android:text="@string/manage_retrieval_list" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:backgroundTint="@color/reject"
        android:src="@drawable/ic_power_settings_new_black_24dp" />
</LinearLayout>